adding some frontend code

--- a/src/AspNet5SQLite/wwwroot/templates/home.html
+++ b/src/AspNet5SQLite/wwwroot/templates/home.html
@@ -1,3 +1,5 @@
-﻿<div><h4 class="panel-heading">Alarms Tester</h4></div>
+﻿<div><h4 class="panel-heading">Home View</h4></div>
 
-<div class="col-xs-12" ui-view></div>
+<hr />
+
+<div class="col-xs-6" ui-view></div>
