--- a/src/AspNet5SQLite/wwwroot/templates/details.html
+++ b/src/AspNet5SQLite/wwwroot/templates/details.html
@@ -13,18 +13,22 @@
 			<hr />
 			<div class="row">
 				<div class="col-xs-2">Name</div>
-				<div class="col-xs-6">{{dataEventRecord.Name}}</div>
+				<div class="col-xs-6"><input type="text" ng-model="dataEventRecord.Name" style="width:100%" /></div>
 			</div>
 			<hr />
 			<div class="row">
 				<div class="col-xs-2">Description</div>
-				<div class="col-xs-6">{{dataEventRecord.Description}}</div>
+				<div class="col-xs-6"><input type="text" ng-model="dataEventRecord.Description" style="width:100%" /></div>
 			</div>
 			<hr />
-			<div class="row">
-				<div class="col-xs-2">Timestamp</div>
-				<div class="col-xs-6">{{dataEventRecord.Timestamp}}</div>
-			</div>
+		    <div class="row">
+		        <div class="col-xs-2">Timestamp</div>
+		        <div class="col-xs-6">{{dataEventRecord.Timestamp}}</div>
+		    </div>
+            <hr />
+            <div class="row">
+                <div class="col-xs-2"><button ng-click="Update()">Update</button></div>
+            </div>
 		</div>
 	</div>
 </div>
