--- a/src/AspNet5SQLite/wwwroot/templates/create.html
+++ b/src/AspNet5SQLite/wwwroot/templates/create.html
@@ -7,7 +7,7 @@
 
             <div class="row">
                 <div class="col-xs-2">Id</div>
-                <div class="col-xs-6">{{dataEventRecord.Id}}</div>
+                <div class="col-xs-6"><input type="text" ng-model="dataEventRecord.Id" style="width: 100%" /></div>
             </div>
 
             <hr/>
@@ -21,15 +21,10 @@
                 <div class="col-xs-2">Description</div>
                 <div class="col-xs-6"><input type="text" ng-model="dataEventRecord.Description" style="width: 100%"/>
                 </div>
-            </div>
+            </div>         
             <hr/>
             <div class="row">
-                <div class="col-xs-2">Timestamp</div>
-                <div class="col-xs-6">{{dataEventRecord.Timestamp}}</div>
-            </div>
-            <hr/>
-            <div class="row">
-                <div class="col-xs-2"><button ng-click="Update()">Update</button>
+                <div class="col-xs-2"><button ng-click="Update()">Create</button>
                 </div>
             </div>
         </div>
