adding a create method

--- a/src/AspNet5SQLite/wwwroot/templates/create.html
+++ b/src/AspNet5SQLite/wwwroot/templates/create.html
@@ -24,7 +24,7 @@
             </div>         
             <hr/>
             <div class="row">
-                <div class="col-xs-2"><button ng-click="Update()">Create</button>
+                <div class="col-xs-2"><button ng-click="Create()">Create</button>
                 </div>
             </div>
         </div>
