--- a/src/AspNet5SQLite/wwwroot/templates/overview.html
+++ b/src/AspNet5SQLite/wwwroot/templates/overview.html
@@ -1,7 +1,7 @@
-﻿<div class="col-xs-5">
+﻿<div class="col-xs-6">
 	<div class="panel panel-primary">
 		<div class="panel-heading">
-			<h3 class="panel-title">{{message}}</h3>
+		    <h3 class="panel-title">{{message}} <a ui-sref="create">Create</a></h3>
 		</div>
 		<div class="panel-body">
 			<table class="table">
@@ -14,7 +14,8 @@
 				<tbody>
 					<tr style="height:20px;" ng-repeat="dataEventRecord in dataEventRecords">
 						<td><a href="#/home/overview/details/{{dataEventRecord.Id}}">{{dataEventRecord.Name}}</a></td>
-                        <td>{{dataEventRecord.Timestamp}}</td>
+					    <td>{{dataEventRecord.Timestamp}}</td>
+                        <td><button ng-click="Delete(dataEventRecord.Id)">Delete</button></td>
 					</tr>
 				</tbody>
 			</table>
